# stratos

./: .gitignore  README.md  planning.txt  premake5.lua
src/engine/: CMakeLists.txt  LICENSE.txt  README.md  main.cpp  premake5.lua
src/engine/core/: st_core.cpp  st_core.h  st_flags.h
src/engine/entity/: st_atmosphere_component.cpp  st_atmosphere_component.h  st_component.cpp  st_component.h  st_entity.cpp  st_entity.h  st_hello_component.cpp  st_hello_component.h  st_lua_component.cpp  st_lua_component.h  st_sun_component.cpp  st_sun_component.h
src/engine/framework/: st_camera.cpp  st_camera.h  st_compiler_defines.h  st_drawcall.h  st_frame_params.h  st_global_resources.cpp  st_global_resources.h  st_input.cpp  st_input.h  st_output.cpp  st_output.h  st_scene.cpp  st_scene.h  st_sim.cpp  st_sim.h
src/engine/graphics/: dds.h  st_animation.h  st_animation_component.cpp  st_animation_component.h  st_buffer.h  st_constant_buffer.h  st_constant_color_material.cpp  st_constant_color_material.h  st_cube_component.cpp  st_cube_component.h  st_debug_geometry.cpp  st_debug_geometry.h  st_deferred_light_material.cpp  st_deferred_light_material.h  st_deferred_light_render_pass.cpp  st_deferred_light_render_pass.h  st_drawcall.h  st_egg_parser.cpp  st_egg_parser.h  st_framebuffer.h  st_fullscreen_material.cpp  st_fullscreen_material.h  st_fullscreen_render_pass.cpp  st_fullscreen_render_pass.h  st_gbuffer_material.cpp  st_gbuffer_material.h  st_gbuffer_render_pass.cpp  st_gbuffer_render_pass.h  st_geometry.cpp  st_geometry.h  st_graphics.cpp  st_graphics.h  st_graphics_context.h  st_imgui_graphics.h  st_light_component.cpp  st_light_component.h  st_material.cpp  st_material.h  st_model_component.cpp  st_model_component.h  (+40 more)
src/engine/graphics/animation/: st_animation_component.cpp  st_animation_component.h
src/engine/graphics/dx12/: st_dx12_constant_buffer.cpp  st_dx12_constant_buffer.h  st_dx12_drawcall.h  st_dx12_framebuffer.cpp  st_dx12_framebuffer.h  st_dx12_geometry.cpp  st_dx12_geometry.h  st_dx12_graphics.h  st_dx12_material.cpp  st_dx12_material.h  st_dx12_pipeline_state.cpp  st_dx12_pipeline_state.h  st_dx12_render_context.cpp  st_dx12_render_context.h  st_dx12_render_marker.cpp  st_dx12_render_marker.h  st_dx12_render_texture.cpp  st_dx12_render_texture.h  st_dx12_resource_table.cpp  st_dx12_shader.cpp  st_dx12_shader.h  st_dx12_texture.cpp  st_dx12_texture.h  st_dx12_vertex_format.cpp  st_dx12_vertex_format.h
src/engine/graphics/geometry/: st_debug_geometry.cpp  st_debug_geometry.h  st_geometry.cpp  st_geometry.h  st_model_component.cpp  st_model_component.h  st_model_data.cpp  st_model_data.h  st_vertex_attribute.h  st_vertex_format.cpp  st_vertex_format.h
src/engine/graphics/light/: st_directional_light.h  st_point_light.h  st_sphere_light.h
src/engine/graphics/material/: st_bloom_material.cpp  st_bloom_material.h  st_constant_color_material.cpp  st_constant_color_material.h  st_deferred_light_material.cpp  st_deferred_light_material.h  st_fullscreen_material.cpp  st_fullscreen_material.h  st_gaussian_blur_material.cpp  st_gaussian_blur_material.h  st_gbuffer_material.cpp  st_gbuffer_material.h  st_material.h  st_parallax_occlusion_material.cpp  st_parallax_occlusion_material.h  st_phong_material.cpp  st_phong_material.h  st_tonemap_material.cpp  st_tonemap_material.h  st_unlit_texture_material.cpp  st_unlit_texture_material.h
src/engine/graphics/opengl/: st_gl_constant_buffer.cpp  st_gl_constant_buffer.h  st_gl_drawcall.h  st_gl_framebuffer.cpp  st_gl_framebuffer.h  st_gl_geometry.cpp  st_gl_geometry.h  st_gl_graphics.cpp  st_gl_graphics.h  st_gl_material.cpp  st_gl_material.h  st_gl_pipeline_state.cpp  st_gl_pipeline_state.h  st_gl_program.cpp  st_gl_program.h  st_gl_render_context.cpp  st_gl_render_context.h  st_gl_render_marker.cpp  st_gl_render_marker.h  st_gl_render_texture.cpp  st_gl_render_texture.h  st_gl_resource_table.cpp  st_gl_shader.cpp  st_gl_shader.h  st_gl_texture.cpp  st_gl_texture.h
src/engine/graphics/parse/: st_egg_parser.cpp  st_ply_parser.cpp  st_ply_parser.h
src/engine/graphics/pass/: st_atmosphere_pass.cpp  st_atmosphere_pass.h  st_bloom_render_pass.cpp  st_bloom_render_pass.h  st_deferred_light_render_pass.cpp  st_deferred_light_render_pass.h  st_directional_shadow_pass.cpp  st_directional_shadow_pass.h  st_display_pass.cpp  st_display_pass.h  st_fullscreen_render_pass.cpp  st_fullscreen_render_pass.h  st_gaussian_blur_render_pass.cpp  st_gaussian_blur_render_pass.h  st_gbuffer_render_pass.cpp  st_gbuffer_render_pass.h  st_passthrough_render_pass.cpp  st_passthrough_render_pass.h  st_scene_render_pass.cpp  st_scene_render_pass.h  st_smaa_pass.cpp  st_smaa_pass.h  st_tonemap_render_pass.cpp  st_tonemap_render_pass.h  st_ui_render_pass.cpp  st_ui_render_pass.h
src/engine/graphics/platform/dx12/: d3dx12.h  st_dx12_buffer.cpp  st_dx12_buffer.h  st_dx12_command_allocator.cpp  st_dx12_command_allocator.h  st_dx12_command_list.cpp  st_dx12_command_list.h  (+39 more)
src/engine/gui/: imgui_impl_stratos.cpp  imgui_impl_stratos.h  st_button.cpp  st_button.h  st_checkbox.cpp  st_checkbox.h  st_font.cpp  st_font.h  st_gui.cpp  st_gui.h  st_imgui.cpp  st_imgui.h  st_label.cpp  st_label.h  st_slider.cpp  st_slider.h  st_widget.cpp  st_widget.h
src/engine/import/: st_assimp.cpp  st_assimp.h
src/engine/jobs/: st_condvar.cpp  st_condvar.h  st_fiber.cpp  st_fiber.h  st_intpool.cpp  st_intpool.h  st_job.cpp  st_job.h  st_queue.cpp  st_queue.h
src/engine/math/: st_mat3f.cpp  st_mat3f.h  st_mat4f.cpp  st_mat4f.h  st_math.h  st_quatf.cpp  st_quatf.h  st_vec2f.cpp  st_vec2f.h  st_vec3f.cpp  st_vec3f.h  st_vec4f.cpp  st_vec4f.h  st_vecnf.h
src/engine/physics/: st_intersection.cpp  st_intersection.h  st_intersection.tests.cpp  st_intersection.tests.h  st_physics_component.cpp  st_physics_component.h  st_physics_world.cpp  st_physics_world.h  st_playermove_component.cpp  st_playermove_component.h  st_rigid_body.cpp  st_rigid_body.h  st_shape.cpp  st_shape.h
src/engine/system/: st_message_thread.cpp  st_message_thread.h  st_window.cpp  st_window.h
(+155 files in other folders)
